2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Added an option, override log font.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Added a button to open the user theme path in finder on the preference dialog.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Removed the default theme file.
	Changed to rescue exceptions from dir.mkpath.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Added +h channel mode support.
	Changed to print operator marks in the center.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Implemented theme for the member list.
	Changed to print operator marks and nick names separately in the member list.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Changed to set background color for log views to stop flickering in starting up.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Implemented theme for the server tree.

2007-12-12  Satoshi Nakagawa <artension@gmail.com>

	Improved encoding choices.
	Fixed a bug of a NSColor utility method.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Added NSColor utilities.
	Removed UnitNameCell.
	Refactoring.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Fixed a string format for CTCP ping time.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, 3 column layout should be applied on starting up.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Added the "Spring Night" theme.
	Changed to use the default font when failed to create a font.
	Changed to set an insertion point color for the input text field.
	Tweaked log view styles.

2007-12-10  Satoshi Nakagawa <artension@gmail.com>

	Added a theme support for the input text field.
	Tweaked the default css for log views.

2007-12-08  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, pasting multi line text to the input text field caused an exception.

2007-12-07  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, a definition of IRC::ADDRESS_LEN was missing.
