@@ -1,2 +1,2 @@
-AppVersion = "LimeChat for OSX 0.12.6";
+AppVersion = "LimeChat for OSX 0.12.8";
 CtcpClientInfo = "DCC VERSION CLIENTINFO USERINFO PING TIME";
