@@ -94,12 +94,12 @@ class Preferences
   
   class Theme
     include PersistenceHelper
-    persistent_attr :name, :override_log_font, :log_font_family, :log_font_size
+    persistent_attr :name, :override_log_font, :log_font_name, :log_font_size
     
     def initialize
       @name = 'resource:Default'
       @override_log_font = false
-      @log_font_family = 'Lucida Grande'
+      @log_font_name = 'Lucida Grande'
       @log_font_size = 12
     end
   end
